[package]
name = "mzml"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
quick-xml = { version = "0.28", features = ["serialize", "overlapped-lists"] }
rayon = "1.7.0"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
thiserror = "1.0"
uom = "0.35.0"
zune-inflate = "0.2"

[dev-dependencies]
stringreader = "0.1"
rayon = "1.7.0"
reqwest = { version = "0", features = ["blocking"] }
tempfile = "3"
